@@ -1,5 +1,9 @@
 Change Log:
 
+**1/21/16**
+- Fixed S6 damage (was in log but not included in calculations)
+- Cooldown skills (Vengeance, RoV, FoK) now start immediately and Vengeance/Seethe no longer waits until hatred has been reduced before starting
+
 **1/13/16**
 - Added Karlei's Point 
 - Added Sword of Ill Will 
